--- a/inventario/css/estilos.css
+++ b/inventario/css/estilos.css
@@ -1,1 +1,31 @@
-@import "https://cdn.jsdelivr.net/npm/bulma@1.0.0/css/bulma.min.css";
+
+body,html{
+    background-color: aqua;
+    height: 100%;
+    width: 100%;
+}
+
+.main-container{
+    height: 100%;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.main-container > .box login,
+.main-container > .hero-body{
+    height: auto;
+    width: 100%;
+    max-width: 400px;
+    min-width: 300px;
+}
+
+
+.navbar{
+    background-color: rgb(191, 140, 239);
+}
+.title{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
